# SFML-NSHighResolutionCapable-Demo

./: .gitignore  CMakeLists.txt  README
include/: CMakeLists.txt
osx/: CMakeLists.txt  Info_False.plist.in  Info_True.plist.in  resourcePath.mm
prebuild/False.app/Contents/: Info.plist
prebuild/False.app/Contents/MacOS/: False
prebuild/True.app/Contents/: Info.plist
prebuild/True.app/Contents/MacOS/: True
source/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
